--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a type="button" class="btnMD-contained scroll" href="#caracteristicas">CARACTERÍSTICAS </a>
                 <a type="button" class="btnMD-contained scroll" href="#porque">¿POR QUÉ? </a>
                 <a type="button" class="btnMD-contained scroll" href="#planes">PLANES </a>
-                <a type="button" class="btnMD-contained " href="form.html">COMPRAR </a>
+                <!-- <a type="button" class="btnMD-contained " href="form.html">COMPRAR </a> -->
 
             </div>
 
@@ -157,7 +157,7 @@
                             </div></div>
                         </div>
 
-                        <div class="col-md-4 empty2">
+                        <div class="col-md-4 empty2 hidden-xs" >
                                 <div class="row d-flex align-items-center">
                                         <div class="col-xs-2 col-md-12">
                             <i class="zmdi zmdi-cloud-outline-alt zmdi-hc-5x"></i>
@@ -184,8 +184,8 @@
 
         <section id="porque">
             <div class="container-fluid page3">
-                <div class="container">
-                    <div class="row" style="margin-top: 150px; color: white;display:flex; align-items: center;">
+                <div class="container ">
+                    <div class="row"id="sep" style=" color: white;display:flex; align-items: center;">
                         
                         <div class="col-md-6 col-sm-12">
 
